--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             type="text"
             id="name"
             placeholder="Full name"
+            name="name"
             required
             minlength="3"
             maxlength="100"
@@ -29,6 +30,7 @@
             type="tel"
             id="phone"
             placeholder="012-345-6789"
+            name="phone"
             required
             pattern="[0-9]{10}"
           />
@@ -39,6 +41,7 @@
             type="email"
             id="email"
             placeholder="email@address.com"
+            name="email"
             required
           />
         </div>
@@ -48,13 +51,14 @@
             type="url"
             id="website"
             placeholder="https://github.com/izzhariz"
+            name="website"
             required
           />
         </div>
         <div class="form-group">
           <label for="password1">Password</label>
           <input
-            type="text"
+            type="password"
             id="password1"
             placeholder="Create password (Min. 8 characters)"
             required
@@ -68,6 +72,7 @@
             type="password"
             id="password2"
             placeholder="Confirm password"
+            name="password"
             required
             pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$"
           />
